@@ -2,6 +2,7 @@
  - Add EXAMPLE2 to PYX::SGML::Tags.
  - Add tests for parse() method.
  - Rename tests to better names (tag → element).
+ - Rename PYX data files to better names (tag → element).
  - Update Module::Install to 1.19 version.
  - Update copyright years.
  - Update my name to reality.
